tests/errors/duplicate-arg.au
class A{}
def (self: A) a(self) {}